--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0"
   }
