--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "sqlite3": "^5.1.7"
   }
 }
