--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0",
     "sqlite3": "^5.1.7",
